Implement a fake shop with fake data
satisfying the minimal GraphQL schema for the UI

--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@
 # Uncomment the line below to remove Front-Commerce
 # demo schema from this GraphQL schema
 # FEATURE_DEMO_REMOTE_SCHEMA_STITCHING_DISABLE=true
+
+# Uncomment the line below to enable a fake local shop
+# FEATURE_FAKE_LOCAL_SHOP_ENABLE=true
