Add sample moltin config

--- a/.env
+++ b/.env
@@ -12,3 +12,10 @@
 
 # Uncomment the line below to enable a fake local shop
 # FEATURE_FAKE_LOCAL_SHOP_ENABLE=true
+
+# Uncomment the lines below to enable a Moltin integration
+# Find the keys from your Moltin account: https://dashboard.moltin.com/app
+# FEATURE_MOLTIN_INTEGRATION_ENABLE=true
+# FRONT_COMMERCE_MOLTIN_STORE_ID=
+# FRONT_COMMERCE_MOLTIN_CLIENT_ID=
+# FRONT_COMMERCE_MOLTIN_CLIENT_SECRET=
