--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "dev:server": "NODE_ENV=development nodemon build/server.js",
     "dev:client": "NODE_ENV=development webpack-dev-server --config webpack.config.js",
     "start": "concurrently -k \"npm run watch:server\" \"npm run dev:server\" \"npm run dev:client\"",
+    "serve": "NODE_ENV=production node build/server/server.js",
+    "now-start": "npm run serve",
     "storybook": "start-storybook -p 9001 -s .storybook"
   },
   "repository": {
