--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "homepage": "https://github.com/front-commerce/front-commerce-lite#readme",
   "dependencies": {
     "@gramps/gramps": "2.0.0",
+    "@moltin/sdk": "^3.19.0",
     "apollo-boost": "0.3.1",
     "apollo-client": "2.5.1",
     "apollo-link-http": "1.5.12",
