POC Admin Authentication

--- a/.env
+++ b/.env
@@ -12,3 +12,7 @@ FEATURE_DEMO_REMOTE_SCHEMA_STITCHING_DISABLE=true
 
 # Uncomment the line below to enable a fake local shop
 # FEATURE_FAKE_LOCAL_SHOP_ENABLE=true
+
+# Oro
+# Get from: https://demo.orocommerce.com/admin/user/profile/view
+ORO_ADMIN_API_KEY=
