--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "file-loader": "3.0.1",
     "graphql": "14.1.1",
     "graphql-tools": "4.0.4",
+    "jsonapi-serializer": "^3.6.4",
     "node-fetch": "2.3.0",
     "raw-loader": "1.0.0",
     "react": "16.8.4",
